<resources>
    <string name="app_name">SofraApp</string>
    <string name="order_food">Order Food</string>
    <string name="sell_food">Sell Food</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="delivery_time">Delivery time</string>
    <string name="confirm_password">Confirm password</string>
    <string name="minimum_order_cost">Minimum order cost</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="continuee">continue</string>
    <string name="connection_data">Connection Data</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="store_image">Store Image</string>
    <string name="register">register</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="please_enter_your_email_address">Please enter your Email address</string>
    <string name="please_enter_sent_code">Please enter sent code</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="code">Code</string>
    <string name="don_t_have_account_click">Don\'t have account? Click</string>
    <string name="here">HERE</string>
    <string name="do_you_forget_password">Do you forget password?</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="error">error</string>
    <string name="error_internet">internet error</string>
    <string name="failed">Failed!</string>
    <string name="min_order_cost">Minimum order cost: </string>
    <string name="riel">Riel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="food_list">Food List</string>
    <string name="comments_and_rate">Comments and Rate</string>
    <string name="store_info">Store Info</string>
    <string name="price">Price:</string>
    <string name="status">Status</string>
    <string name="minimum_cost">Minimum cost</string>
    <string name="add_comment_or_review">add comment or review</string>
    <string name="choose_rate">Choose Rate</string>
    <string name="add_your_comment_here">add your comment here</string>
    <string name="add">add</string>
    <string name="my_categories">My categories</string>
    <string name="category_image">Category Image</string>
    <string name="category_name">Category name</string>
    <string name="edit">edit</string>
    <string name="call">Call</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="completed_order">Completed order</string>
    <string name="refused_order">Refused order</string>
    <string name="client">Client:</string>
    <string name="total">Total:</string>
    <string name="address">Address:</string>
    <string name="new_orders">New Orders</string>
    <string name="current_Orders">Current Orders</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="product_name">Product name</string>
    <string name="brief_description">Brief description</string>
    <string name="price_in_offer">Price in offer</string>
    <string name="preparing_time">Preparing time</string>
    <string name="product_image">Product Image</string>
    <string name="minute">minute</string>
    <string name="more">More</string>
    <string name="my_offers">My offers</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About app</string>
    <string name="comments_and_reviews">Comments and reviews</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="new_offers">New offers</string>
    <string name="add_new_offer">Add new offer</string>
    <string name="add_offer_image">Add offer image</string>
    <string name="offer_name">offer name</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="select_date">Select date</string>
    <string name="offer_price">offer price</string>
    <string name="offer_image">Offer image</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="confirm_the_new_password">Confirm the new password</string>
    <string name="special_order">Special order</string>
    <string name="quantity">Quantity</string>
    <string name="fav_restaurant">fav restaurant</string>
    <string name="please_enter_quantity">Please enter quantity</string>
    <string name="total_cost">Total Cost</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="add_more">Add More</string>
    <string name="order_details">Order Details</string>
    <string name="add_notes">Add notes</string>
    <string name="delivery_address">Delivery address</string>
    <string name="paying">Paying</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="total_payment">Total Payment:</string>
    <string name="day">Day:</string>
    <string name="order_cost">Order cost</string>
    <string name="payment">Payment:</string>
    <string name="refused">Refuse</string>
    <string name="order_number">Order Number:</string>
    <string name="delivery_confirmation">Delivery Confirmation</string>
    <string name="order_declined">Order Declined</string>
    <string name="order_completed">Order Completed</string>
    <string name="order_rejected">Order Rejected</string>
    <string name="offers">Offers</string>
    <string name="signed_out">Signed out</string>
    <string name="who_s_us">WHO\'S US</string>
    <string name="full_name">Full name</string>
    <string name="what_s_your_message">What\'s your message..</string>
    <string name="complaining">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="enquiry">Inquiry</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="details">Details</string>
    <string name="offer_details">Offer Details</string>
    <string name="get_it_now">Get it now</string>
    <string name="please_enter_rejection_reason_here">Please enter rejection reason here..</string>
    <string name="rejection_reason">Rejection Reason</string>
    <string name="state_changed">State Changed</string>
    <string name="select_city_and_region_first">Select city and region first</string>
    <string name="commisions">Commisions</string>
    <string name="restaurant_sales">Restaurant sales:</string>
    <string name="application_commissions">Application commissions:</string>
    <string name="what_was_paid_off">What was paid off:</string>
    <string name="remaining">Remaining:</string>
    <string name="raghy">Raghy:</string>
    <string name="ahly">Ahly:</string>
    <string name="sofra">Sofra</string>
    <string name="your_sharing_by_comment_or_review_makes_us_happy">Your sharing by comment or review makes us happy</string>
    <string name="review_added_successfully">Review added successfully</string>
</resources>
