<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dim_16dp"
    tools:context=".view.fragment.homeCycle.more.RestaurantMoreFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/more"
        android:textSize="@dimen/dim_24sp"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/restaurant_more_fragment_tv_my_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:drawableStart="@drawable/ic_offer"
        android:drawablePadding="@dimen/dim_12dp"
        android:text="@string/my_offers"
        android:textColor="@color/blue"
        android:textSize="@dimen/dim_24sp"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/restaurant_more_fragment_tv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:drawableStart="@drawable/ic_email_24"
        android:drawablePadding="@dimen/dim_12dp"
        android:text="@string/contact_us"
        android:textColor="@color/blue"
        android:textSize="@dimen/dim_24sp"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/restaurant_more_fragment_tv_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:drawableStart="@drawable/ic_idea_lamp"
        android:drawablePadding="@dimen/dim_12dp"
        android:text="@string/about_app"
        android:textColor="@color/blue"
        android:textSize="@dimen/dim_24sp"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/restaurant_more_fragment_tv_comments_and_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:drawableStart="@drawable/ic_review_star"
        android:drawablePadding="@dimen/dim_12dp"
        android:text="@string/comments_and_reviews"
        android:textColor="@color/blue"
        android:textSize="@dimen/dim_24sp"
        android:clickable="true"/>

    <View
        android:id="@+id/restaurant_more_fragment_view_comments_and_reviews"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@color/gray"/>

    <TextView
        android:id="@+id/restaurant_more_fragment_tv_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:drawableStart="@drawable/ic_pass_lock"
        android:drawablePadding="@dimen/dim_12dp"
        android:text="@string/change_password"
        android:textColor="@color/blue"
        android:textSize="@dimen/dim_24sp"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:layout_marginTop="@dimen/dim_8dp"
        android:background="@color/gray"/>


    <TextView
        android:id="@+id/restaurant_more_fragment_tv_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24dp"
        android:drawableStart="@drawable/ic_sign_out"
        android:drawablePadding="@dimen/dim_12dp"
        android:text="@string/sign_out"
        android:textColor="@color/blue"
        android:textSize="@dimen/dim_24sp"
        android:clickable="true"/>


</LinearLayout>